--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.12.4",
     "errorhandler": "^1.3.5",
     "express": "^4.12.3",
+    "moment": "^2.10.3",
     "mongoose": "^4.0.3",
     "multer": "^0.1.8",
     "nodemon": "^1.3.7",
