--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "books!",
   "main": "index.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.4",
     "errorhandler": "^1.3.5",
     "express": "^4.12.3",
