--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "mongoose": "^4.0.3",
     "multer": "^0.1.8",
     "nodemon": "^1.3.7",
+    "passport": "^0.2.2",
+    "passport-http": "^0.2.2",
     "path": "^0.11.14"
   },
   "devDependencies": {},
