--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.4",
+    "connect-flash": "^0.1.1",
+    "ejs": "^2.3.1",
     "errorhandler": "^1.3.5",
     "express": "^4.12.3",
+    "express-session": "^1.11.2",
     "moment": "^2.10.3",
     "mongoose": "^4.0.3",
     "multer": "^0.1.8",
     "nodemon": "^1.3.7",
     "passport": "^0.2.2",
     "passport-http": "^0.2.2",
+    "passport-local": "^1.0.0",
     "path": "^0.11.14"
   },
   "devDependencies": {},
