--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "multer": "^0.1.8",
     "nodemon": "^1.3.7",
     "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
     "passport-http": "^0.2.2",
     "passport-local": "^1.0.0",
-    "path": "^0.11.14"
+    "passport-twitter": "^1.0.3",
+    "path": "^0.11.14",
+    "url": "^0.10.3"
   },
   "devDependencies": {},
   "scripts": {
