--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.10.3",
     "mongoose": "^4.0.3",
     "multer": "^0.1.8",
+    "node-env-file": "^0.1.7",
     "nodemon": "^1.3.7",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
