--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.1.34",
+    "backbone.paginator": "^2.0.2",
+    "backgrid": "^0.3.5",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.4",
     "connect-flash": "^0.1.1",
